...
  Tuple2('casino', 'Casino'),
  Tuple2('match_the_following', 'Match'),
  Tuple2('bingo', 'Bingo'),
  Tuple2('true_or_false', 'True Or False'),
  Tuple2('tables', 'Tables'),
  Tuple2('identify', 'identify'),
  Tuple2('fill_number', 'Fill Number'),
  Tuple2('quiz', 'Quiz'),
  Tuple2('connect_the_dots', 'Connect The Dots'),
  Tuple2('tap_home', 'Tap Home'),
  Tuple2('tap_wrong', 'Tap Wrong'),
  Tuple2('guess', 'guess'),
  Tuple2('wordgrid', 'Word Grid'),
...
      appBar: AppBar(
        title: Text(Loca.of(context).games),
      ),
      body: Container(
        color: Color(0xFFFFFFFF),
        child: new GridView.count(
          key: new Key('Game_page'),
          primary: true,
//          padding: const EdgeInsets.all(.0),
          crossAxisSpacing: 12.0,
          mainAxisSpacing: 12.0,
          crossAxisCount: media.size.height > media.size.width ? 3 : 4,
          children: gameNames
...
