...
        .toList();
    int i = 0;
    int wlen = widget.wrongChoice.length;
    int index;

    while (i < wlen) {
      index = Random().nextInt(choiceDetails.length);
      choiceDetails.insert(
          index, _ChoiceDetail(choice: widget.wrongChoice[i], isWrong: true));
      i++;
    }
  }

...
