...
import 'package:maui/widgets/theme_background.dart';

class Game extends StatefulWidget {
  final QuizSession quizSession;
  final UpdateCoins updateCoins;
  final OnGameUpdate onGameUpdate;
  const Game({Key key, this.quizSession, this.updateCoins, this.onGameUpdate})
      : super(key: key);
  @override
  _GameState createState() => _GameState();
}

class _GameState extends State<Game> {
...
